--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-gen_data/pred_extrapolation_wu.csv
+gen_data/raw_pred_extrapolation_wu.csv
 designs_counts_original.csv
 reformat_df.py
-pretrained_models/*
+#pretrained_models/*
 data/olson_pred_fitnesses.csv
 .DS_Store
 .ipynb_checkpoints/
